Page MenuHome GnuPG

pinentry should not prompt for saving in a password manager when secret service is not available
Closed, ResolvedPublic

Description

when libsecret is enabled, and no-external-cache is not set for gpg-agent, the
pinenentries will always show the "save in password manager" option.

however, if there is no backend available, then the selection will fail.

It would be preferable if the checkbox only displays when we know that a
password service is actually available.

Unfortunately, doing so probably means using something more sophisticated than
the libsecret "simple API".

Details

Version
0.9.4

Event Timeline

dkg added projects: pinentry, Bug Report.
dkg added a subscriber: dkg.

Thanks for this report: you are absolutely right, we need to check if the actual
secret service is usable and not only if the library is available.

How exactly does pinentry fail? Does it just silently fail to save the
password? Does it still return the entered password to gpg-agent?

Thanks.

Looks to me like it just fails silently.