core: Disable "save passphrase" checkbox without secret service.

* pinentry/password-cache.c (password_cache_lookup): New argument
FATAL_ERROR.  Set it on fatal error.
* pinentry/password-cache.h (password_cache_lookup): New argument
FATAL_ERROR in declaration.
* pinentry/pinentry.c (cmd_getpin): On fatal error, disallow
external password store.
* NEWS: Update.

Signed-off-by: Marcus Brinkmann <mb@g10code.com>
GnuPG-bug-id: 2023