pinentry/password-cache.h
@@ -22,7 +22,7 @@
 
 void password_cache_save (const char *key_grip, const char *password);
 
-char *password_cache_lookup (const char *key_grip);
+char *password_cache_lookup (const char *key_grip, int *fatal_error);
 
 int password_cache_clear (const char *keygrip);
 
